add more css styling to text and modal

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <!-- Header-->
     <section class="header">
       <div class="card-container-title">
-        <h1 class="title-has-text-centered">The Hangry Potato 🥔</h1>
+        <h1 class="title-has-text-centered is-size-1">The Hangry Potato 🥔</h1>
       </div>
     </section>
 
     <!-- Search Bar -->
-    <div class="search-bar">
+    <div class="search-bar is-centered">
       <div class="field is-grouped">
         <p class="control is-expanded">
           <input
@@ -34,10 +34,11 @@
       </div>
     </div>
 
+    <h3 class="title has-text-centered is-size-3">Your Recipes</h3>
+
     <!-- Card Section -->
     <section class="section is-hidden-mobile">
       <div class="card-container">
-        <h3 class="title has-text-centered is-size-4">Your Results</h3>
         <div class="mt-5 columns is-centered is-8 is-variable">
           <div class="column is-4-tablet is-3-desktop">
             <div class="card">
@@ -93,11 +94,12 @@
 
     <!-- Modal -->
 
-    <div class="modal">
+    <div class="modal is-active">
       <div class="modal-background"></div>
-      <div class="modal-content">
-        <p class="image is-4by3">
-          <img src="https://bulma.io/images/placeholders/1280x960.png" alt="" />
+      <div class="modal-content has-background-#633102">
+        <h3 class="title mb-6 is-centered">Hey...</h3>
+        <p class="is-centered">
+          Only the hangriest of potatoes are allowed beyond this point.
         </p>
       </div>
       <button class="modal-close is-large" aria-label="close"></button>
