finalize modal styling and create the javascript

--- a/index.html
+++ b/index.html
@@ -96,13 +96,18 @@
 
     <div class="modal is-active">
       <div class="modal-background"></div>
-      <div class="modal-content has-background-#633102">
+      <div class="modal-content">
         <h3 class="title mb-6 is-centered">Hey...</h3>
         <p class="is-centered">
           Only the hangriest of potatoes are allowed beyond this point.
         </p>
       </div>
-      <button class="modal-close is-large" aria-label="close"></button>
+      <button
+        class="modal-close is-large"
+        id="close"
+        aria-label="close"
+      ></button>
     </div>
+    <script src="assets/js/script.js"></script>
   </body>
 </html>
