--- a/index.html
+++ b/index.html
@@ -11,10 +11,15 @@
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
-    <!-- Header-->
-    <section class="header">
+    <!-- Hero Section -->
+    <section class="hero">
       <div class="card-container-title">
         <h1 class="title-has-text-centered is-size-1">The Hangry Potato 🥔</h1>
+      </div>
+      <div class="slogan">
+        <h2 class="title-has-text-centered is-size-2">
+          Recipes so gouda, you'll be raisin the roof!
+        </h2>
       </div>
     </section>
 
@@ -33,8 +38,8 @@
         </p>
       </div>
     </div>
-
-    <h3 class="title has-text-centered is-size-3">Your Recipes</h3>
+    <!-- Results -->
+    <h3 class="title has-text-centered is-size-3">Your Recipes:</h3>
 
     <!-- Card Section -->
     <section class="section is-hidden-mobile">
@@ -46,7 +51,7 @@
                 <img src="assets/images/potatoes.jpg" alt="Placeholder image" />
               </div>
               <div class="card-content">
-                <p>20 Minutes</p>
+                <p>10 Minutes</p>
                 <p class="title is-size-5">Potato Soup</p>
               </div>
               <footer class="card-footer">
@@ -62,7 +67,7 @@
                 <img src="assets/images/potatoes.jpg" alt="Placeholder image" />
               </div>
               <div class="card-content">
-                <p>20 Minutes</p>
+                <p>30 Minutes</p>
                 <p class="title is-size-5">Potato Bread</p>
               </div>
               <footer class="card-footer">
@@ -93,10 +98,9 @@
     </section>
 
     <!-- Modal -->
-
     <div class="modal is-active">
       <div class="modal-background"></div>
-      <div class="modal-content">
+      <div class="modal-content" width="300px" height="200px">
         <h3 class="title mb-6 is-centered">Hey...</h3>
         <p class="is-centered">
           Only the hangriest of potatoes are allowed beyond this point.
