--- a/index.html
+++ b/index.html
@@ -3,19 +3,98 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>:potato:</title>
+    <title>🥔</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"
     />
   </head>
   <body>
-    <section class="section">
+    <!-- Header-->
+    <section class="Header-Title">
       <div class="container">
-        <h1 class="title">The Hangry Potato :potato:</h1>
-        <p class="subtitle">My first website with <strong>Bulma</strong>!</p>
+        <h1 class="title has-text-centered">The Hangry Potato 🥔</h1>
       </div>
     </section>
+
+    <!-- Search Bar -->
+    <div class="field is-grouped">
+      <p class="control is-expanded">
+        <input class="input" type="text" placeholder="Find a repository" />
+      </p>
+      <p class="control">
+        <a class="button is-info"> Search </a>
+      </p>
+    </div>
+
+    <!-- Card Section -->
+    <section class="section is-hidden-mobile">
+      <div class="container">
+        <h3 class="title has-text-centered is-size-4">Your Results</h3>
+        <div class="mt-5 columns is-centered is-8 is-variable">
+          <div class="column is-4-tablet is-3-desktop">
+            <div class="card">
+              <div class="card-image has-text-centered px-6">
+                <img src="assets/images/potatoes.jpg" alt="Placeholder image" />
+              </div>
+              <div class="card-content">
+                <p>20 Minutes</p>
+                <p class="title is-size-5">Potato Soup</p>
+              </div>
+              <footer class="card-footer">
+                <p class="card-footer-item">
+                  <a href="" class="has-text-grey">View</a>
+                </p>
+              </footer>
+            </div>
+          </div>
+          <div class="column is-4-tablet is-3-desktop">
+            <div class="card">
+              <div class="card-image has-text-centered px-6">
+                <img src="assets/images/potatoes.jpg" alt="Placeholder image" />
+              </div>
+              <div class="card-content">
+                <p>20 Minutes</p>
+                <p class="title is-size-5">Potato Bread</p>
+              </div>
+              <footer class="card-footer">
+                <p class="card-footer-item">
+                  <a href="" class="has-text-grey">View</a>
+                </p>
+              </footer>
+            </div>
+          </div>
+          <div class="column is-4-tablet is-3-desktop">
+            <div class="card">
+              <div class="card-image has-text-centered px-6">
+                <img src="assets/images/potatoes.jpg" alt="Placeholder image" />
+              </div>
+              <div class="card-content">
+                <p>20 Minutes</p>
+                <p class="title is-size-5">Potato Chips</p>
+              </div>
+              <footer class="card-footer">
+                <p class="card-footer-item">
+                  <a href="" class="has-text-grey">View</a>
+                </p>
+              </footer>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Modal -->
+
+    <div class="modal">
+      <div class="modal-background"></div>
+      <div class="modal-content">
+        <p class="image is-4by3">
+          <img src="https://bulma.io/images/placeholders/1280x960.png" alt="" />
+        </p>
+      </div>
+      <button class="modal-close is-large" aria-label="close"></button>
+    </div>
     <script src="./assets/js/script.js"></script>
   </body>
 </html>
