update all files to prep js

--- a/index.html
+++ b/index.html
@@ -28,74 +28,71 @@
       <div class="field is-grouped">
         <p class="control is-expanded">
           <input
-            class="input"
             type="text"
+            class="input"
+            id="search-input"
             placeholder="What's making you hangry?"
           />
         </p>
-        <p class="control">
-          <a class="button is-info"> Search </a>
+        <p class="search-btn" id="search-btn">
+          <button class="button is-info" type="submit"> Search </button>
         </p>
       </div>
     </div>
-    <!-- Results -->
-    <h3 class="title has-text-centered is-size-3">Your Recipes:</h3>
+    <!-- Recipe Results -->
+    <div class="recipe-results">
+      <h3 class="title has-text-centered is-size-3">Your Recipes:</h3>
 
-    <!-- Card Section -->
-    <section class="section is-hidden-mobile">
-      <div class="card-container">
-        <div class="mt-5 columns is-centered is-8 is-variable">
-          <div class="column is-4-tablet is-3-desktop">
-            <div class="card">
-              <div class="card-image has-text-centered px-6">
-                <img src="assets/images/potatoes.jpg" alt="Placeholder image" />
+      <!-- Card Section -->
+        <div class="recipe-card" id="recipes">
+          <div class="mt-5 columns is-centered is-8 is-variable">
+            <div class="column is-4-tablet is-3-desktop">
+              <div class="card">
+                <div class="card-image has-text-centered px-6">
+                  <img
+                    src="assets/images/potatoes.jpg"
+                    alt="Placeholder image"
+                  />
+                </div>
+                <div class="card-content">
+                  <p class="time">10 Minutes</p>
+                  <p class="title is-size-5">Potato Soup</p>
+                </div>
+                <button class="card-footer">
+                  <p class="recipe-view" id="view">
+                    <a href="" class="has-text-grey">View</a>
+                  </p>
+                </button>
               </div>
-              <div class="card-content">
-                <p>10 Minutes</p>
-                <p class="title is-size-5">Potato Soup</p>
-              </div>
-              <footer class="card-footer">
-                <p class="card-footer-item">
-                  <a href="" class="has-text-grey">View</a>
-                </p>
-              </footer>
             </div>
-          </div>
-          <div class="column is-4-tablet is-3-desktop">
-            <div class="card">
-              <div class="card-image has-text-centered px-6">
-                <img src="assets/images/potatoes.jpg" alt="Placeholder image" />
-              </div>
-              <div class="card-content">
-                <p>30 Minutes</p>
-                <p class="title is-size-5">Potato Bread</p>
-              </div>
-              <footer class="card-footer">
-                <p class="card-footer-item">
-                  <a href="" class="has-text-grey">View</a>
-                </p>
-              </footer>
+        </div>
+    </div>
+
+    <div class = "meal-details">
+        <!-- recipe close btn -->
+        <button type = "button" class = "btn recipe-close-btn" id = "recipe-close-btn">
+          <i class = "fas fa-times"></i>
+        </button>
+
+        <!-- Recipe Details -->
+        <div class = "recipe-content">
+          <h2 class = "recipe-title">Meal Name</h2>
+            <p class = "recipe-category">Category</p>
+            <div class = "recipe-instruct">
+              <h3>Instructions:</h3>
+              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo blanditiis quis accusantium natus! Porro, reiciendis maiores molestiae distinctio veniam ratione ex provident ipsa, soluta suscipit quam eos velit autem iste!</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet aliquam voluptatibus ad obcaecati magnam, esse numquam nisi ut adipisci in?</p>
             </div>
-          </div>
-          <div class="column is-4-tablet is-3-desktop">
-            <div class="card">
-              <div class="card-image has-text-centered px-6">
-                <img src="assets/images/potatoes.jpg" alt="Placeholder image" />
-              </div>
-              <div class="card-content">
-                <p>20 Minutes</p>
-                <p class="title is-size-5">Potato Chips</p>
-              </div>
-              <footer class="card-footer">
-                <p class="card-footer-item">
-                  <a href="" class="has-text-grey">View</a>
-                </p>
-              </footer>
+            <div class = "recipe-meal-img">
+            <img src = "food.jpg" alt = "">
             </div>
+            <div class = "recipe-link">
+            <a href = "#" target = "_blank">Watch Video</a>
           </div>
         </div>
       </div>
-    </section>
+    </div>
+  </div>
 
     <!-- Modal -->
     <div class="modal is-active">
